Add cli-welcome package

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
     "name": "amorem",
     "version": "1.1.1",
+    "description": "Get to know Amorem",
     "bin": {
         "amorem": "index.js"
     },
     "dependencies": {
-        "clear-any-console": "^1.16.2"
+        "cli-welcome": "^2.2.2"
     }
 }
